# formulog

./: .gitignore  .travis.yml  Dockerfile  README.md  _config.yml  changelog.md  docker-compose.yml  index.md  license-header  pom.xml
.github/workflows/: maven.yml  pages.yml  submit-deps.yml
benchmarks/: .gitignore  fibonacci.flg  generation.flg  greeting.flg  reverse.flg  test193.flg
benchmarks/tc/: .gitignore  rand_graph.py  tc.dl  tc.flg  test.sh
docs/: 00_language_ref.md  01_language_basics.md  02_program_safety.md  03_goal_directed_evaluation.md  04_logical_formulas.md  _config.yml  goal_directed_evaluation.md  index.md  language_basics.md  logical_formulas.md  program_safety.md  pubs.md  starting.md  tutorial.md
docs/eval_modes/: compile.md  eager.md  index.md  options.md  smt.md
docs/lang_ref/: goal_directed_eval.md  index.md  lang_basics.md  logical_formulas.md  program_safety.md
docs/tutorial/: index.md  tutorial.flg  tutorial.md
examples/: greeting.flg  liquid_types.flg  symeval.flg  tutorial.flg  tutorial.md  tutorial_running.flg
formulog-anonymized/: README.md
formulog-anonymized/docs/: 01_language_basics.md  02_program_safety.md
formulog-anonymized/examples/: liquid_types.flg  symeval.flg
formulog-anonymized/misc/: flg.vim
formulog-anonymized/src/main/java/formulog/: Configuration.java  Main.java  PrintPreference.java
formulog-anonymized/src/main/java/formulog/ast/: AbstractRule.java  AbstractTerm.java  BasicProgram.java  BasicRule.java  ComplexLiteral.java  Expr.java  Exprs.java  (+14 more)
formulog-anonymized/src/test/resources/: test005_ok.flg  test013_ok.flg  test020_ok.flg  test021_ok.flg  test031_ok.flg  test034_ok.flg  test040_ok.flg  test044_ok.flg  test045_ok.flg  test050_bd.flg  test053_ok.flg  test054_ok.flg  test059_ok.flg  test077_ok.flg  test081_ok.flg  test082_ok.flg  test083_ok.flg  test085_ok.flg  test086_ok.flg  test099_ok.flg  test103_ok.flg  test104_ok.flg  test113_ok.flg  test117_ok.flg  test126_ok.flg  test135_ok.flg  test143_ok.flg  test147_ok.flg  test148_ok.flg  test160_ok.flg  test161_ok.flg  test162_ok.flg  test167_ok.flg  test174_ok.flg  test176_ok.flg  test177_ok.flg  test181_ok.flg  test185_bd.flg  test222_ok.flg  test230_ok.flg  (+12 more)
formulog-src-anonymized/: pom.xml
formulog-src-anonymized/docs/: 03_goal_directed_evaluation.md
formulog-src-anonymized/src/test/resources/: test004_ok.flg  test007_ok.flg  test008_ok.flg  test010_ok.flg  test015_ok.flg  test022_ok.flg  test025_bd.flg  test026_bd.flg  test035_ok.flg  test037_ok.flg  test038_ok.flg  test041_ok.flg  test042_ok.flg  test043_ok.flg  test049_ok.flg  test063_ok.flg  test078_ok.flg  test091_bd.flg  test100_ok.flg  test101_ok.flg  test105_ok.flg  test110_ok.flg  test118_bd.flg  test120_ok.flg  test129_ok.flg  test132_bd.flg  test137_ok.flg  test140_ok.flg  test141_ok.flg  test158_ok.flg  test159_ok.flg  test168_ok.flg  test169_ok.flg  test172_ok.flg  test179_ok.flg  test183_ok.flg  test223_ok.flg  test225_ok.flg  test233_ok.flg  test241_ok.flg  (+20 more)
misc/: flg.vim
src/main/resources/: .gitignore  FactParser.hpp  Makefile  Symbol.cpp  Symbol.hpp  Term.cpp  Term.hpp  Type.hpp  compile.sh  funcs.hpp  main.cpp  parser.cpp  parser.hpp  rels.hpp  smt.cpp  smt.hpp
src/main/resources/codegen/: CMakeLists.txt
src/main/resources/codegen/src/: ConcurrentHashMap.hpp  Symbol.cpp  Symbol.hpp  Term.cpp  Term.hpp  Tuple.hpp  Type.cpp  Type.hpp  funcs.hpp  functors.cpp  functors.h  globals.cpp  globals.h  main.cpp  parser.cpp  parser.hpp  rels.hpp  set.cpp  set.hpp  smt.cpp  smt.hpp  smt_parser.cpp  smt_parser.h  smt_parser.hpp  smt_shim.cpp  smt_shim.h  smt_solver.cpp  smt_solver.h  time.hpp
src/main/resources/parsing/: Formulog.interp  Formulog.tokens  FormulogBaseVisitor.cpp  FormulogBaseVisitor.h  FormulogLexer.cpp  FormulogLexer.h  FormulogLexer.interp  FormulogParser.cpp  FormulogParser.h  FormulogVisitor.cpp  FormulogVisitor.h
src/test/resources/: test001_ok.flg  test002_ok.flg  test003_ok.flg  test005_ok.flg  test006_ok.flg  test007_ok.flg  test008_ok.flg  test009_ok.flg  test010_ok.flg  test011_ok.flg  test012_bd.flg  test013_ok.flg  test014_ok.flg  test015_ok.flg  test016_ok.flg  test017_ok.flg  test018_ok.flg  test019_ok.flg  test020_ok.flg  test021_ok.flg  test022_ok.flg  test023_ok.flg  test024_ok.flg  test025_bd.flg  test026_bd.flg  test026_ok.flg  test027_ok.flg  test028_ok.flg  test029_ok.flg  test030_ok.flg  test031_ok.flg  test032_ok.flg  test033_ok.flg  test034_ok.flg  test035_ok.flg  test036_ok.flg  test037_ok.flg  test038_ok.flg  test039_ok.flg  test040_ok.flg  (+299 more)
src/test/resources/agg_tests/: test194_ok.flg  test196_bd.flg  test203_bd.flg  test206_ok.flg  test210_ok.flg  test211_ok.flg
src/test/resources/balbin/: test001_ok.flg  test002_ok.flg  test003_ok.flg  test004_ok.flg
src/test/resources/balbin_comparison/: test001_ok.flg  test002_ok.flg  test003_ok.flg
src/test/resources/inflationary/: test002_ok.flg  test003_ok.flg  test004_ok.flg
src/test/resources/semi-inflationary/: test001_ok.flg  test002_ok.flg  test004_ok.flg
src/test/resources/test191_input/: complex_terms.csv  names.csv  numbers.csv
src/test/resources/tmp/: test240_ok.flg
(+680 files in other folders)
